--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "build": "react-scripts build"
   },
   "dependencies": {
+    "express": "^4.18.2",
+    "pg": "^8.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1"
