--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
     "build": "react-scripts build"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "morgan": "^1.10.0",
     "pg": "^8.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1"
+    "react-router-dom": "^6.8.1",
+    "socket.io": "^4.6.0",
+    "socket.io-client": "^4.6.0"
   },
   "browserslist": {
     "production": [
@@ -21,5 +28,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20",
+    "react-scripts": "^5.0.1"
   }
 }
